--- a/src/client/index.html
+++ b/src/client/index.html
@@ -35,6 +35,8 @@
             <br />
             <a onclick="document.getElementById('spawn_cell').play();"><button id="startButton">Play</button></a>
             <button onclick="window.location.href = 'skins.html'" id="skinsButton">Skins</button>
+            
+            <button id="spectateButton" style="display:none;">Spectate</button>
             <button id="settingsButton"></button>
             <br />
             <div id="settings">
