--- a/src/client/index.html
+++ b/src/client/index.html
@@ -37,7 +37,7 @@
             <button onclick="window.location.href = 'skins.html'" id="skinsButton">Skins</button>
             
             <button id="spectateButton" style="display:none;">Spectate</button>
-            <button id="settingsButton"></button>
+            <button id="settingsButton" style="display:none;"></button>
             <br />
             <div id="settings">
                     <label><input id="visBord" type="checkbox" checked>Show border</label>
