--- a/src/client/index.html
+++ b/src/client/index.html
@@ -44,7 +44,7 @@
             <input type="text" tabindex="0" autofocus placeholder="Nick" id="playerNameInput" maxlength="25" />
             <b class="input-error">Nick must be alphanumeric characters only!</b>
             <br />
-            <a onclick="document.getElementById('spawn_cell').play();"><button id="startButton">Play</button></a>
+            <a><button id="startButton">Play</button></a>
             <button onclick="window.location.href = 'skins.html'" id="skinsButton">Skins</button>
             
             <button id="spectateButton" style="display:none;">Spectate</button>
