--- a/src/client/index.html
+++ b/src/client/index.html
@@ -40,7 +40,7 @@
     </div>
     <div id="startMenuWrapper">
         <div id="startMenu">
-            <p>agar5 <b>(NEW!)</b></p>
+            <p>agar5 <b>(NEW VERSION!)</b></p>
             <input type="text" tabindex="0" autofocus placeholder="Nick" id="playerNameInput" maxlength="25" />
             <b class="input-error">Nick must be alphanumeric characters only!</b>
             <br />
@@ -63,9 +63,12 @@
                     <li>Eat other cells to grow bigger.</li>
                     <li><small style="font-size:9px !important">user id: <span id="userid" style="font-size:9px !important"></span></small></li>
                 </ul>
-                <hr>
-                    <li>Welcome to the new version of agar5! This version <b>NEVER</b> crashes anymore! Also it is always being updated by the original creator of agar5.</li>
-                </hr>
+                <ul>
+                    <li>Welcome to the new version of agar5!</li>
+                    <li>This version <b>NEVER CRASHES</b> anymore,</li>
+                    <li>Allows you to not get kicked when you switch tab,</li>
+                    <li>And is always being updated by the original agar5 creator! Enjoy.</li>
+                </ul>
             </div>
         </div>
     </div>
