--- a/src/client/index.html
+++ b/src/client/index.html
@@ -24,7 +24,7 @@
     <meta name="google-site-verification" content="-nsL7kgJnWVgkYPP49k4nSOw1kG121pcRg5qHKAtsR4" />
     <meta name="google-site-verification" content="yNND-qtSEWOvezo57hLYz_pKVxBEoGnJiHEHAO2PsgM" />
     
-    <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+    <script src='js/responsivevoice.js'></script>
 </head>
 <body>
     <div id="gameAreaWrapper">
@@ -59,9 +59,9 @@
             </div>
             <div id="instructions">
                 <ul>
-                    <li>Move your mouse to control your cell.</li>
-                    <li>Eat other cells to grow bigger.</li>
-                    <li><small style="font-size:9px !important">user id: <span id="userid" style="font-size:9px !important"></span></small></li>
+                    <li style="color:red;font-weight:bold;font-size:17px;margin-bottom:5px;">New update!</li>
+                    <li style="font-size:12px;">The eating glitch should hopefully happen MUCH less now, also there are more admin commands now, and there's also this whole new UI!</li>
+                    <!--<li><small style="font-size:9px !important">user id: <span id="userid" style="font-size:9px !important"></span></small></li>-->
                 </ul>
                 <hr>
                 <ul>
