Admin-only commands added, also changed homepage a little bit

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -60,7 +60,7 @@
             <div id="instructions">
                 <ul>
                     <li style="color:red;font-weight:bold;font-size:17px;margin-bottom:5px;">New update!</li>
-                    <li style="font-size:12px;">The eating glitch should hopefully happen MUCH less now, also there are more admin commands now, and there's also this whole new UI!</li>
+                    <li style="font-size:12px;"><b>The eating glitch is officially fixed</b>, also there are more admin commands now, and there's also this whole new dark UI!</li>
                     <!--<li><small style="font-size:9px !important">user id: <span id="userid" style="font-size:9px !important"></span></small></li>-->
                 </ul>
                 <hr>
