--- a/src/client/index.html
+++ b/src/client/index.html
@@ -33,7 +33,7 @@
     </div>
     <div id="startMenuWrapper">
         <div id="startMenu">
-            <p>agar5 <b>.ml</b></p>
+            <li style="color:red;font-weight:bold;font-size:23px;margin-bottom:5px;">CakeGar Beta</li>
             <input type="text" tabindex="0" autofocus placeholder="Nick" id="playerNameInput" maxlength="25" />
             <b class="input-error">Nick must be alphanumeric characters only!</b>
             <br />
