--- a/src/client/index.html
+++ b/src/client/index.html
@@ -49,8 +49,8 @@
             </div>
             <div id="instructions">
                 <ul>
-                    <li style="color:red;font-weight:bold;font-size:17px;margin-bottom:5px;">Released as of!</li>
-                    <li style="font-size:12px;"><b>Jan. 30th 2018</b></li>
+                    <li style="color:red;font-weight:bold;font-size:17px;margin-bottom:5px;">Released as of - Jan. 30th 2018</li>
+                    <li style="font-size:12px;"><b>Brought to you by CakeAlts</b></li>
                     <!--<li><small style="font-size:9px !important">user id: <span id="userid" style="font-size:9px !important"></span></small></li>-->
                 </ul>
                 <hr>
