--- a/src/client/index.html
+++ b/src/client/index.html
@@ -34,12 +34,12 @@
     <div id="startMenuWrapper">
         <div id="startMenu">
             <li style="color:red;font-weight:bold;font-size:23px;margin-bottom:5px;">CakeGar Beta</li>
-            <input type="text" tabindex="0" autofocus placeholder="Nick" id="playerNameInput" maxlength="25" />
+            <input type="text" tabindex="0" autofocus placeholder="Nick" id="playerNameInput" maxlength="20" />
             <b class="input-error">Nick must be alphanumeric characters only!</b>
             <br />
             <a><button id="startButton">Play</button></a>            
             <button id="spectateButton" style="display:none;">Spectate</button>
-            <button id="settingsButton" style="display:none;"></button>
+            <button id="settingsButton" style="display:none;">Settings</button>
             <br />
             <div id="settings">
                     <label><input id="visBord" type="checkbox" checked>Show border</label>
