--- a/src/client/index.html
+++ b/src/client/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="CakeGar" />
     <meta property="og:locale" content="en" />
     <meta property="og:site_name" content="CakeGar" />
-    <meta name="keywords" content="unblocked agar,agario,unblocked,agar.io unblocked">    
+    <meta name="keywords" content="">    
     <script src='js/responsivevoice.js'></script>
 </head>
 <body>
